--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
 .total {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
 }
